--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     'params' : {}
                 };
             </script>
-            <script type="text/javascript" src="//www.highperformanceformat.com/YAHAN_APNI_ADSTERRA_KEY_DALO/invoke.js"></script>
+            <script type="text/javascript" src="https://www.highperformanceformat.com/840de81ff5dac8733dfdc0387341c41c/invoke.js"></script"></script>
             <!-- End Ad Code -->
         </div>
     </div>
