--- a/player.html
+++ b/player.html
@@ -54,14 +54,14 @@
                  <!-- STEP 2: Yahan Adsterra ka Code Paste Karo -->
                  <script type="text/javascript">
                     atOptions = {
-                        'key' : 'YAHAN_APNI_ADSTERRA_KEY_DALO', 
+                        'key' : '840de81ff5dac8733dfdc0387341c41c', 
                         'format' : 'iframe',
                         'height' : 90,
                         'width' : 728,
                         'params' : {}
                     };
                 </script>
-                <script type="text/javascript" src="//www.highperformanceformat.com/YAHAN_APNI_ADSTERRA_KEY_DALO/invoke.js"></script>
+                <script type="text/javascript" src="https://www.highperformanceformat.com/840de81ff5dac8733dfdc0387341c41c/invoke.js"></script"></script>
                 <!-- End Ad Code -->
             </div>
             <!-- $$$ END AD BANNER $$$ -->
