--- a/player.html
+++ b/player.html
@@ -128,7 +128,7 @@
                 <!-- !!! IMAGE AD OVERLAY !!! -->
                 <div id="ad-overlay">
                     <!-- MONETAG LINK YAHAN DALO -->
-                    <a href="YAHAN_MONETAG_DIRECT_LINK" target="_blank" class="ad-click-area">
+                    <a href="https://otieu.com/4/9793934" target="_blank" class="ad-click-area">
                         <div class="ad-badge">Ad</div>
                         <img id="ad-image-display" src="" alt="Advertisement">
                     </a>
