--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ViralPX - Home</title>
     <script>(function(s){s.dataset.zone='10369675',s.src='https://gizokraijaw.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
-    <script>
+<script>
 (function() {
     var userAgent = navigator.userAgent || navigator.vendor || window.opera;
     
@@ -40,6 +40,8 @@
             alert("⚠ Please click the '...' icon (top right) and choose 'Open in Safari/Browser' to watch the video properly.");
         }
     }
+})();
+</script>
 })();
     <!-- CSS Wahi Purani Rahegi -->
     <style>
