--- a/player.html
+++ b/player.html
@@ -114,15 +114,15 @@
         const adList = [
             {
                 img: "https://image.tmdb.org/t/p/original/8cdWjvZQUExUUTzyp4t6EDMubfO.jpg", // Image 1 (Uncut)
-                url: "https://monetag-link-1.com" // Link 1
+                url: "https://otieu.com/4/9793934" // Link 1
             },
             {
                 img: "https://image.tmdb.org/t/p/original/fqv8v6AycXKsivp1T5yKtLbGXce.jpg", // Image 2 (Fake Player)
-                url: "https://adsterra-direct-link.com" // Link 2
+                url: "https://otieu.com/4/9793934" // Link 2
             },
             {
                 img: "https://image.tmdb.org/t/p/original/1E5baAaEse26fej7uHkjJDvp57k.jpg", // Image 3 (Viral)
-                url: "https://another-cpa-link.com" // Link 3
+                url: "https://otieu.com/4/9793934" // Link 3
             }
         ];
 
