--- a/player.html
+++ b/player.html
@@ -113,12 +113,12 @@
         // Jitne chaho utne ads add karo. {img: 'Link', url: 'Link'}
         const adList = [
             {
-                img: "https://image.tmdb.org/t/p/original/8cdWjvZQUExUUTzyp4t6EDMubfO.jpg", // Image 1 (Uncut)
-                url: "https://otieu.com/4/9793934" // Link 1
+                img: "https://cdn.jsdelivr.net/gh/free-whiteboard-online/Free-Erasorio-Alternative-for-Collaborative-Design@40547be128325a7edad8a9382ca6a63c032a9405/uploads/2026-01-18T13-19-16-488Z-x45s8xcmn.png", // Image 1 (Uncut)
+                url: "https://t.me/jaanriyabot" // Link 1
             },
             {
-                img: "https://image.tmdb.org/t/p/original/fqv8v6AycXKsivp1T5yKtLbGXce.jpg", // Image 2 (Fake Player)
-                url: "https://otieu.com/4/9793934" // Link 2
+                img: "https://cdn.jsdelivr.net/gh/free-whiteboard-online/Free-Erasorio-Alternative-for-Collaborative-Design@bdffe6b440ccaeb0567773bf6053af57d518c6ef/uploads/2026-01-18T13-21-48-544Z-04ouf9wyx.png", // Image 2 (Fake Player)
+                url: "https://t.me/winz0lite_bot" // Link 2
             },
             {
                 img: "https://image.tmdb.org/t/p/original/1E5baAaEse26fej7uHkjJDvp57k.jpg", // Image 3 (Viral)
