--- a/player.html
+++ b/player.html
@@ -121,7 +121,7 @@
                 url: "https://t.me/winz0lite_bot" // Link 2
             },
             {
-                img: "https://image.tmdb.org/t/p/original/1E5baAaEse26fej7uHkjJDvp57k.jpg", // Image 3 (Viral)
+                img: "https://cdn.jsdelivr.net/gh/free-whiteboard-online/Free-Erasorio-Alternative-for-Collaborative-Design@536590188edbaba20a8e6c0d40cbdbdccf21f72b/uploads/2026-01-18T13-24-24-959Z-3olfaaf4v.jpg", // Image 3 (Viral)
                 url: "https://otieu.com/4/9793934" // Link 3
             }
         ];
